--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,8 @@
     "test",
     "tests"
   ],
-  "dependencies": [
+  "dependencies": {
     "bootstrap": "~3.3.6",
     "font-awesome": "~4.5.0"
-  ]
+  }
 }
