Sube el piano, baja el piano

--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,6 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.6",
-    "font-awesome": "~4.5.0",
-    "jquery-ui": "~1.12.0"
+    "font-awesome": "~4.5.0"
   }
 }
